--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="startbootstrap-resume-gh-pages-project/startbootstrap-resume-gh-pages/index.html">Resume</a>
         <a href="#">Romcoms Ranking</a>
-        <a href="../From Scratch HTML Project/romcom.html/index.html">Romcom Generator</a>
+        <a href="romcom.html\index.html">Romcom Generator</a>
     </nav>
     <div class="common mainbody">
         <h2>So You're Bored on a Friday Night...</h2>
