--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
         </ul>
          <p>Not all of these categories are created equal, but I am going to combine them all for an overall ranking.</p>
             <h2> #5: 10 Things I Hate About You</h2>
-             <img src="../From Scratch HTML Project/Pictures/10 things i hate about you.jfif" alt="10 Things I hate About You">
+             <img src="Pictures/10 things i hate about you.jfif" alt="10 Things I hate About You">
              <p>From Heath Ledger seranading Julia Stiles to the epic paint fight kiss, I love all aspects of this movie. It follows the classic enemies to lovers pipeline, what more could you ask for?</p>
         <br>
             <h2>#4: When Harry Met Sally</h2>
-              <img src="../From Scratch HTML Project/Pictures/whenharrymetslaly.webp" alt="When Harry Met Sally">
+              <img src="Pictures/whenharrymetslaly.webp" alt="When Harry Met Sally">
              <p>This film is a classic. The friendship. The laughs. The sweaters. It's perfect for a fall evening.</p>
         <br>
             <h2>#3: Clueless</h2>
-             <img src="../From Scratch HTML Project/Pictures/clueless.jfif" alt="Clueless">
+             <img src="Pictures/clueless.jfif" alt="Clueless">
             <p>This is one of my personal favorites. It is funny, Cher is an icon, it's practically a perfect movie. The reason it didn't land higher is because I think it's weird to date your ex-step brother.</p>
         <br>
             <h2>#2: How to Lose a Guy in 10 Days</h2>
-                <img src="../From Scratch HTML Project/Pictures/how to lose a guy.jfif" alt="How to Lose a Guy in 10 Days">
+                <img src="Pictures/how to lose a guy.jfif" alt="How to Lose a Guy in 10 Days">
              <p>You didn't think I'd forget this, did you? Matthew McConaughey is a wonderful lead, and Kate Hudson perfectly embodies her character. This is a lot of people's #1.</p>
         <br>
             <h2>#1: Breakfast at Tiffany's</h2>
-             <img src="../From Scratch HTML Project/Pictures/breakfast at tiffany's.jfif" alt="Breakfast at Tiffany's">
+             <img src="Pictures/breakfast at tiffany's.jfif" alt="Breakfast at Tiffany's">
              <p>This movie is the ultimate romcom. It is funny, has strange but complete characters, and a perfect twist. This will forever be the winner to me. The last kiss in the rain? I mean, come on!</p>
             <iframe width="560" height="315" 
                  src="https://www.youtube.com/embed/fL4j9mZfUdg" 
